@@ -1,7 +1,7 @@
 import java.util.ArrayList;
 
 public abstract class Calculation {
-    ArrayList<String> expression;
+    protected ArrayList<String> expression;
 
     Calculation(ArrayList<String> expression){
         this.expression = expression;
@@ -10,18 +10,22 @@ public abstract class Calculation {
     public abstract ArrayList<String> calculate();
 
     public String getFinal(){
-        try{
-            if(expression.size() != 1){
-                throw new Exception("this isnt finished");
-            }
-            return expression.getFirst();
-        }
-        catch (Exception e){
-            e.printStackTrace();
-        }
-        finally {
+//        try{
+//            if(expression.size() != 1){
+//                throw new Exception("this isnt finished");
+//            }
+//            return expression.get(0);
+//        }
+//        catch (Exception e){
+//            e.printStackTrace();
+//        }
+//        finally {
+//
+//        }
+        return expression.getFirst();
 
-        }
-        return "not finished";
+    }
+    public ArrayList<String> getExpression(){
+        return expression;
     }
 }
